left side of homepage logged out styled

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -38,6 +38,7 @@
 
 
 
+<span class="subLogo">Play Games. Earn Credits. Win the Jackpot.</span>
 <div class="sign-up">
   <%= render 'users/form'%>
 </div>
