--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -87,7 +87,7 @@ p {
 #logo {
   float: left;
   margin-right: 10px;
-  font-size: 40px;
+  font-size: 54px;
   color: white;
   text-transform: uppercase;
   letter-spacing: -1px;
@@ -99,6 +99,13 @@ p {
     color: white;
     text-decoration: none;
   }
+}
+
+.subLogo {
+  float: left;
+  margin-left: -225px;
+  font-size: 16px;
+  color: #fff;
 }
 
 .navbar-inverse #logo:hover,
