--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-inverse">
   <div class="navbar-inner">
     <div class="container-fluid">
-      <%= link_to "@lotto", root_path, id: "logo" %>
+      <%= link_to "LUCKEE", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
 
