adding open checkbox to jackpots

--- a/app/views/jackpots/_form.html.erb
+++ b/app/views/jackpots/_form.html.erb
@@ -20,7 +20,10 @@
     <%= f.label :max_entries %><br>
     <%= f.number_field :max_entries %>
   </div> 
-
+  <div class="field">
+    <%= f.label :open %><br>
+    <%= f.check_box :open %>
+  </div> 
   <div class="field">
     <%= f.label :prize %><br>
     <%= f.text_field :prize %>
