--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -462,21 +462,6 @@ body {
   color: #AADDD6;
   text-align: center;
   background-position: 0 0;
-
-}
-
-body.landing {
-  background: url(background_decent.svg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-
-  height: 1000px;
-  background-color: #AADDD6;
-  color: #AADDD6;
-  text-align: center;
-  background-position: 0 0;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -756,6 +741,16 @@ li.navbar-links:hover {
   border: 1px solid #979797;
   width: 400px;
   margin-left: 650px;
+  margin-top: -20px
+}
+
+.edit-user {
+  opacity: 0.74;
+  background: #7B80A2;
+  border: 1px solid #979797;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .blue {
