--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,25 +4,33 @@
     <div style="width:450px;display:inline;float:left;">
 
 
-      <div class="heliHome">
-
-        <p class="gameCover">Helicopter</p>
-        <br />
-        <p class="earnCredits">earn credits</p>
-
-      </div>
-
-      <div class="memoryHome">
-        <div class="dull">
-        <p class="gameCover">Card Match</p>
-        <br />
-        <p class="earnCredits">earn credits</p>
+      <%= link_to game_path(2), style: "text-decoration:none;" do %>
+        <div class="heliHome">
+          <p class="gameCover">Helicopter</p>
+          <br />
+          <p class="earnCredits">earn credits</p>
         </div>
-      </div>
-      <br />
-      <% @games.each do | g | %>
-        <%= link_to "Play #{g.name}", g %> <br/>
       <% end %>
+
+      <%= link_to game_path(3) do %>
+        <div class="memoryHome">
+          <div class="dull">
+          <p class="gameCover">Card Match</p>
+          <br />
+          <p class="earnCredits">earn credits</p>
+          </div>
+        </div>
+      <% end %>
+
+
+      <br />
+        <!-- running list of game links
+        <% @games.each do | g | %>
+          <%= link_to "Play #{g.name}", g %> <br/>
+        <% end %>
+
+      -->
+
     </div>
     <div style="width:450px;display:inline;float:right;margin-top:40px" >
       <p class="prizeHome">Prize: <%= @current_jackpot.prize %></p><br/>
