added favicon and g analytics

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
 <header class="navbar navbar-inverse">
+  <%= favicon_link_tag 'favicon.ico' %>
   <div class="navbar-inner">
     <div class="container-fluid">
       <%= link_to "LUCKEE", root_path, id: "logo" %>
