removed ads for now

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -45,9 +45,11 @@
       </div>
 		</div>
 <% elsif @game.name == "Helicopter" %>
-	<div class="ad-space">
-		A partner image will show here sometimes!
-	</div>
+	<!-- shows advertisement
+    <div class="ad-space">
+  		A partner image will show here sometimes!
+  	</div>
+  -->
 
 	<div class="outcome"></div>
   <div class="instructions"><p>Click anywhere in the game to start.</br>Hold the mouse button down to rise, let go to fall.</br>Every 100 points earns 1 credit!</p>
