added feedback button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,15 @@
       <%= debug(params) if Rails.env.development? %>
     </div>
 
+    <script type="text/javascript">
+      window.doorbellOptions = {
+          appKey: 'DXiwSFA07av7bWEUB3bHshorFfU1fsHNJ4RDPy0ra9jnG268xCOuFkjwDsNH5k47'
+      };
+      (function(d, t) {
+          var g = d.createElement(t);g.id = 'doorbellScript';g.type = 'text/javascript';g.async = true;g.src = 'https://embed.doorbell.io/button/1117?t='+(new Date().getTime());(d.getElementsByTagName('head')[0]||d.getElementsByTagName('body')[0]).appendChild(g);
+      }(document, 'script'));
+    </script>
+
 <% if Rails.env.production? %>
     <!-- google analytics -->
     <script>
