--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -24,7 +24,8 @@
 
 
       <br />
-        <!-- running list of game links
+      <!-- running list of game links
+
         <% @games.each do | g | %>
           <%= link_to "Play #{g.name}", g %> <br/>
         <% end %>
@@ -34,7 +35,7 @@
     </div>
     <div style="width:450px;display:inline;float:right;margin-top:40px" >
       <p class="prizeHome">Prize: <%= @current_jackpot.prize %></p><br/>
-      <p class="prizeHome"><%= (@current_jackpot.user_entries.size/@current_jackpot.max_entries) *100 %>% full</p><br/>
+      <p class="prizeHome"><%= ((@current_jackpot.user_entries.size.to_f/@current_jackpot.max_entries.to_f) *100).to_i%>% full</p><br/>
 
       <div class="moneyPot"></div>
 
