added error message for memory

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,6 +20,7 @@
 
 	<div class="outcome"></div>
   <div class="instructions"><p>Classic card flip game.</br>Find the matching pairs of cards.</br>Every matching pair earns 1 credit!</p>
+  </br><p style="color:red">If game not working in your browser, try 'cmd + shift + R'</p>
   </div>
   <a href='#' id="startGameButton" class="btn btn-outlined btn-theme btn-lg">Start New Game</a>
 		<div id="game">
