--- a/app/views/user_notifier/_cta_module_row.html.erb
+++ b/app/views/user_notifier/_cta_module_row.html.erb
@@ -10,7 +10,7 @@
                                                       <td style="padding-top:0;" align="center" valign="top" width="500" class="flexibleContainerCell">
 
                                                             <!-- CONTENT TABLE // -->
-                                                            <table border="0" cellpadding="0" cellspacing="0" width="50%" class="emailButton" style="background-color: #3498DB;">
+                                                            <table border="0" cellpadding="0" cellspacing="0" width="50%" class="emailButton" style="background-color: #315565;">
                                                                 <tr>
                                                                     <td align="center" valign="middle" class="buttonContent" style="padding-top:15px;padding-bottom:15px;padding-right:15px;padding-left:15px;">
                                                                         <a style="color:#FFFFFF;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:135%;" href="http://getluckee.com" target="_blank"><%= cta_text %></a>
