--- a/app/views/user_notifier/_header_module_row.html.erb
+++ b/app/views/user_notifier/_header_module_row.html.erb
@@ -7,7 +7,7 @@
                                         tables centered in the emailBody table,
                                         in case its width is set to 100%.
                                     -->
-                                  <table border="0" cellpadding="0" cellspacing="0" width="100%" style="color:#FFFFFF;" bgcolor="#3498db">
+                                  <table border="0" cellpadding="0" cellspacing="0" width="100%" style="color:#FFFFFF;" bgcolor="#315565">
                                       <tr>
                                           <td align="center" valign="top">
                                               <!-- FLEXIBLE CONTAINER // -->
