--- a/app/views/user_notifier/_header_module_row.html.erb
+++ b/app/views/user_notifier/_header_module_row.html.erb
@@ -21,7 +21,7 @@
                                                                     <td align="center" valign="top" class="textContent">
                                                                         <h1 style="color:#FFFFFF;line-height:100%;font-family:Helvetica,Arial,sans-serif;font-size:35px;font-weight:normal;margin-bottom:5px;text-align:center;">
                                                                           <%= heading %></h1>
-                                                                        <h2 style="text-align:center;font-weight:normal;font-family:Helvetica,Arial,sans-serif;font-size:23px;margin-bottom:10px;color:#205478;line-height:135%;"><%= sub_heading %></h2>
+                                                                        <h2 style="text-align:center;font-weight:normal;font-family:Helvetica,Arial,sans-serif;font-size:23px;margin-bottom:10px;color:#FFFFFF;line-height:135%;"><%= sub_heading %></h2>
                                                                         <div style="text-align:center;font-family:Helvetica,Arial,sans-serif;font-size:15px;margin-bottom:0;color:#FFFFFF;line-height:135%;"><%= heading_message %></div>
                                                                     </td>
                                                                 </tr>
