fixed homepage, HIW, and logged in home

--- a/app/views/static_pages/how_it_works.html.erb
+++ b/app/views/static_pages/how_it_works.html.erb
@@ -4,11 +4,11 @@
   <div class="row">
     <div class="span4">
       <%= image_tag "play_games.png" %>
-      <p class="HIWfont">Play Games. Earn Cash.</p>
+      <p class="HIWfont">Play any game to earn credits</p>
     </div>
     <div class="span4">
       <%= image_tag "deposit_credits.png" %>
-      <p class="HIWfont"> Earn enough credits to reach the cash out threshold</p>
+      <p class="HIWfont"> Earn enough credits to cash out</p>
     </div>
     <div class="span4">
       <%= image_tag "win_money.png" %>
