--- a/app/views/games/_helicopter.erb
+++ b/app/views/games/_helicopter.erb
@@ -11,7 +11,9 @@
         <div id="leader"><h3>Leaderboard</h3></div>
         <ul>
         <% @top_scores.each do |t| %>
+
           <%
+            next if User.where(id:t.user_id).empty?
             score = t.score
             score = Time.at(t.score).utc.strftime("%M:%S") if @game.name == "Memory Game"
           %>
