adding surveys and referrals for credits

--- a/app/assets/stylesheets/custom_mobile.css.scss
+++ b/app/assets/stylesheets/custom_mobile.css.scss
@@ -32,6 +32,13 @@ textarea {
   width:95%;
   margin:auto;
 }
+.survey-container{
+  width:90%;
+  margin:auto;
+  p{
+    margin-top:20px;
+  }
+}
 .sign-in{
   font-weight: bold;
   border: 1px solid #6f5499;
