--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -18,13 +18,12 @@
     <% when 'Sorcerer Game' %>
       <%= render 'sorcerer_m' %>
   <% end %>
+  
 <input type="hidden" id="game_token" name="game_token" value="<%= session[:game_token] %>" />
-
-
-
 
 <br />
 <div class="container">
 <%= link_to 'Home', root_path, class: "btn btn-outlined btn-theme btn-lg back" %>
 </div>
 
+<script>(function(t,e,n,o){var c,s,i;t.SMCX=t.SMCX||[],e.getElementById(o)||(c=e.getElementsByTagName(n),s=c[c.length-1],i=e.createElement(n),i.type="text/javascript",i.async=!0,i.id=o,i.src=["https:"===location.protocol?"https://":"http://","widget.surveymonkey.com/collect/website/js/hn6Rb7cvnQCjv9qLGBTcZs1hnTGIoCdiG5FZ_2FB5HkZ4B13NRUlwT8P1N8noX0Dg4.js"].join(""),s.parentNode.insertBefore(i,s))})(window,document,"script","smcx-sdk");</script><a style="font: 12px Helvetica, sans-serif; color: #999; text-decoration: none;" href=https://www.surveymonkey.com/mp/customer-satisfaction-surveys/> Create your own user feedback survey </a>
