--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
             0
             <% end %>
             </span> credits</li>
-            <li class="navbar-links" id="normal-links"><%= link_to "Surveys", '#' %></li>
+            <li class="navbar-links" id="normal-links"><%= link_to "Surveys", surveys_path %></li>
 
             <li class="navbar-links btn btn-outlined btn-theme btn-sm" data-wow-delay="0.7s"><%= link_to "Redeem Credits", redeem_path %></li>
 
