adding refer page with url

--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -83,6 +83,9 @@
                 <%= link_to root_path do %> 
                     <h2>Luckee</h2>
                 <% end %>
+                <div class='referral-link'>
+                    <%= link_to "Refer Friend", refer_path %>
+                </div>
             </div>
           <% flash.each do |key, value| %>
             <div class="alert alert-<%= key %>"><%= value %></div>
