--- a/app/views/games/show_mobile.html.erb
+++ b/app/views/games/show_mobile.html.erb
@@ -9,3 +9,4 @@
       <%= render 'sorcerer_m' %>
   <% end %>
 </div>
+<input type="hidden" id="game_token" name="game_token" value="<%= session[:game_token] %>" />
