--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -25,7 +25,7 @@
 
         <%= f.password_field :password_confirmation, placeholder: "Confirm Password" %>
         
-        <%= f.submit "Create my account", class: "btn btn-outlined btn-white btn-lg btn-Create" %>
+        <%= f.submit "Create my account", class: "btn btn-outlined btn-white btn-lg btn-Create create-email" %>
 
         <p class="termsOfService">by registering you agree to our <em><b>Privacy Policy</b></em> and <em><b>Terms of Service</b></em></p>
       <% end %>
